Replacing html comments with jekyll comments

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -85,7 +85,7 @@ permalink: /buttons
 
     <h2 class="mb-8">Button configurations</h2>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Button</div>
       <div class="field__data">
@@ -94,7 +94,7 @@ permalink: /buttons
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Button - small capital (possible with any color)</div>
       <div class="field__data">
@@ -103,7 +103,7 @@ permalink: /buttons
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Button - go</div>
       <div class="field__data">
@@ -113,7 +113,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Button - naked</div>
       <div class="field__data">
@@ -123,7 +123,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Button - drop</div>
       <div class="field__data">
@@ -133,7 +133,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Buttons - aligned text in the middle</div>
       <div class="field__data">
@@ -145,7 +145,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Buttons - aligned text in the middle 2</div>
       <div class="field__data">
@@ -162,7 +162,7 @@ permalink: /buttons
   <div class="sm:w-1/2 p-8 overflow-hidden">
     <h2 class="mb-8">Push configurations - looks like a button, but it's a link</h2>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Push</div>
       <div class="field__data">
@@ -171,7 +171,7 @@ permalink: /buttons
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Push - small capital (possible with any color)</div>
       <div class="field__data">
@@ -180,7 +180,7 @@ permalink: /buttons
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Push - go</div>
       <div class="field__data">
@@ -190,7 +190,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Push - naked</div>
       <div class="field__data">
@@ -200,7 +200,7 @@ permalink: /buttons
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Push - drop</div>
       <div class="field__data">
