--- a/pages/font.html
+++ b/pages/font.html
@@ -94,7 +94,7 @@ permalink: /font
       <td class="ff-ssp-tf bold highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp bold"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
-    <!--
+    {% comment %}
     <tr>
       <td class="label">italic</td>
       <td class="ff-ssp italic"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
@@ -102,7 +102,7 @@ permalink: /font
       <td class="ff-ssp-tf italic highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp italic"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
-    -->
+    {% endcomment %}
     <tr>
       <td class="label">600</td>
       <td class="ff-ssp w600"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
