--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -64,7 +64,7 @@ permalink: /inputs
 
 <div class="flex flex-col sm:flex-row m-8 py-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 px-4">
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field">
       <div class="field__label">Title</div>
       <div class="field__data">
@@ -78,7 +78,7 @@ permalink: /inputs
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field">
       <div class="field__label">Email</div>
       <div class="field__data">
@@ -92,7 +92,7 @@ permalink: /inputs
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field JS_field--error">
       <div class="field__label">Assigned to</div>
       <div class="field__data">
@@ -106,7 +106,7 @@ permalink: /inputs
       </div>
     </div>
 
-    <!-- Popup (error)-->
+    {% comment %} Popup (error){% endcomment %}
     <div class="multiSelector" id="ms-error-user">
       <div class="itemBox">
         <div class="itemBox__row">
