--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -85,7 +85,7 @@ permalink: /tutorial
                 </div>
              </div>
           </div>
-          <!-- content-->
+          {% comment %} content{% endcomment %}
           <div class="clear"></div>
        </div>
     </div>
