--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -75,8 +75,8 @@ permalink: /selectors
 
     <h2 class="mb-8">Single select configuration examples without popup</h2>
 
-    <!-- SingleSelects -->
-    <!-- Field -->
+    {% comment %} SingleSelects {% endcomment %}
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Single select - expanded</div>
       <div class="field__data">
@@ -85,7 +85,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Single select - expanded and required (you cannot unselect all of them)</div>
       <div class="field__data">
@@ -94,7 +94,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Single select - expanded and readonly</div>
       <div class="field__data">
@@ -104,7 +104,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Single select - not expanded (shows only one item) - no popup attached</div>
       <div class="field__data">
@@ -114,7 +114,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Single select - not expanded (shows only one item) and readonly</div>
       <div class="field__data">
@@ -126,8 +126,8 @@ permalink: /selectors
   </div>
   <div class="sm:w-1/2 p-2 overflow-hidden">
     <h2 class="mb-8">Multi select configuration examples without popup</h2>
-    <!-- Multiselects -->
-    <!-- Field -->
+    {% comment %} Multiselects {% endcomment %}
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Multi select - expanded</div>
       <div class="field__data">
@@ -136,7 +136,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Multi select - expanded and required (at least one has to be selected)</div>
       <div class="field__data">
@@ -145,7 +145,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Multi select - expanded and readonly</div>
       <div class="field__data">
@@ -154,7 +154,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Multi select - not expanded</div>
       <div class="field__data">
@@ -163,7 +163,7 @@ permalink: /selectors
         </div>
       </div>
     </div>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Multi select - not expanded and readonly</div>
       <div class="field__data">
@@ -178,7 +178,7 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/3 p-2 overflow-hidden">
     <h2 class="my-8">Examples without popup</h2>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Panel selector</div>
       <div class="field__data">
@@ -188,7 +188,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Danger level</div>
       <div class="field__data">
@@ -198,7 +198,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Status</div>
       <div class="field__data">
@@ -208,7 +208,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Status</div>
       <div class="field__data">
@@ -218,7 +218,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Tags</div>
       <div class="field__data">
@@ -228,7 +228,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Product contact</div>
       <div class="field__data">
@@ -240,7 +240,7 @@ permalink: /selectors
   </div>
   <div class="sm:w-1/3 p-2 overflow-hidden">
     <h2 class="my-8">Examples with popup</h2>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Privacy Policy - tooltip example (note in popup), click icon
         <div class="inline-action primary animate-fly-in-left JS_has-popup JS_has-popup--tooltip" data-popid="#ms-privacy"></div>
@@ -255,7 +255,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Popup -->
+    {% comment %} Popup {% endcomment %}
     <div class="multiSelector" id="ms-privacy">
       <div class="itemBox">
         <div class="itemBox__row">
@@ -274,7 +274,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty JS_field--error">
       <div class="field__label">Status - with description and error animation </div>
       <div class="field__data">
@@ -299,7 +299,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Popup -->
+    {% comment %} Popup {% endcomment %}
     <div class="multiSelector" id="ms-error">
       <div class="itemBox">
         <div class="itemBox__row">
@@ -316,7 +316,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Popup -->
+    {% comment %} Popup {% endcomment %}
     <div class="multiSelector animate-popup" id="ms-status">
       <div class="itemBox">
         <div class="itemBox__row">
@@ -358,7 +358,7 @@ permalink: /selectors
   </div>
   <div class="sm:w-1/3 p-2 overflow-hidden">
     <h2 class="mt-8">Checkboxes</h2>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Checkbox</div>
       <div class="field__data">
@@ -368,7 +368,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Checkbox - colored </div>
       <div class="field__data">
@@ -384,7 +384,7 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
     <h2 class="mb-8">Read-only with ellipsis</h2>
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__data">
         <div class="field__value">
@@ -398,7 +398,7 @@ permalink: /selectors
 
     <h2 class="mb-8">Tag Picker</h2>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Tags</div>
       <div class="field__data">
@@ -408,7 +408,7 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Popup -->
+    {% comment %} Popup {% endcomment %}
     {% include popups/multiSelector-tags-colors.html %}
   </div>
 </div>
@@ -418,7 +418,7 @@ permalink: /selectors
 
     <h2 class="mb-8">Filters</h2>
 
-    <!-- Field -->
+    {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Description</div>
       <div class="field__data">
@@ -446,7 +446,7 @@ permalink: /selectors
       </div>
     </div>
 
-      <!-- Field -->
+      {% comment %} Field {% endcomment %}
       <div class="field field--not-empty">
         <div class="field__label">Tags  Filter with popup</div>
         <div class="field__data">
@@ -490,10 +490,10 @@ permalink: /selectors
         </div>
       </div>
 
-      <!-- Popup -->
+      {% comment %} Popup {% endcomment %}
       {% include popups/filter-tags.html%}
 
-      <!-- Field -->
+      {% comment %} Field {% endcomment %}
       <div class="field field--not-empty">
         <div class="field__label">Date  Filte with popupr</div>
         <div class="field__data">
@@ -533,7 +533,7 @@ permalink: /selectors
         </div>
       </div>
 
-      <!-- Popup -->
+      {% comment %} Popup {% endcomment %}
       {% include popups/filter-date.html%}
   </div>
 </div>
