Theme selector renamed to Background selector

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -9,7 +9,7 @@ permalink: /inputs
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
   <div class="px-4">
     <div class="field field--not-empty">
-      <div class="field__label">Theme</div>
+      <div class="field__label">Background</div>
       <div class="field__data">
         <div class="field__value">
           <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
