--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -9,7 +9,7 @@ permalink: /buttons
   <div class="px-4">
 
     <div class="field field--not-empty">
-      <div class="field__label">Theme</div>
+      <div class="field__label">Background</div>
       <div class="field__data">
         <div class="field__value">
           <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
