added background color switch

--- a/pages/tabs.html
+++ b/pages/tabs.html
@@ -7,6 +7,7 @@ permalink: /tabs
 <div class="relative h-32">
 </div>
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
+  {% include blocks/extra-options/background.html %}
   <div class="px-4">
     <div class="field field--not-empty">
       <div class="field__label">Theme</div>
