--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -6,30 +6,7 @@ permalink: /buttons
 
 <div class="relative h-32"></div>
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
-  <div class="px-4">
-
-    <div class="field field--not-empty">
-      <div class="field__label">Background</div>
-      <div class="field__data">
-        <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field JS_theme_light">Light</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix JS_theme_dark">Dark</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
+  {% include blocks/extra-options/background.html %}
   <div class="px-4">
 
     <div class="field field--not-empty">
@@ -59,13 +36,6 @@ permalink: /buttons
 </div>
 
 <script>
-  $('.JS_theme_light').on('click', function() {
-    $('body').css('background-color', 'white');
-  });
-  $('.JS_theme_dark').on('click', function() {
-    $('body').css('background-color', 'black');
-  });
-
   $('.JS_load_pushes').on('click', function() {
     $('.push').each(function() {
       $(this).toggleClass('animate-loading');
