--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -7,28 +7,7 @@ permalink: /inputs
 <div class="relative h-32">
 </div>
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
-  <div class="px-4">
-    <div class="field field--not-empty">
-      <div class="field__label">Background</div>
-      <div class="field__data">
-        <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem" tabindex='0'>
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field JS_theme_light">Light</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem" tabindex='0'>
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix JS_theme_dark">Dark</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include blocks/extra-options/background.html %}
   <div class="px-4">
     <div class="field field--not-empty">
       <div class="field__label">Loading</div>
@@ -48,13 +27,6 @@ permalink: /inputs
 </div>
 
 <script>
-  $('.JS_theme_light').on('click', function() {
-    $('body').css('background-color', 'white');
-  });
-  $('.JS_theme_dark').on('click', function() {
-    $('body').css('background-color', 'black');
-  });
-
   $('.JS_load_inputs').on('click', function() {
     $('input.field__input').each(function() {
       $(this).closest('.field__value').toggleClass('animate-loading');
