added a theme selector

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -8,12 +8,13 @@ permalink: /inputs
 </div>
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
   {% include blocks/extra-options/background.html %}
+  {% include blocks/extra-options/theme.html %}
   <div class="px-4">
     <div class="field field--not-empty">
       <div class="field__label">Loading</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector">
+          <div class="selector selector--multiselect selector--expanded JS_selector JS_extra">
             <div class="selector__item JS_selectorItem--active JS_selectorItem" tabindex='0'>
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field JS_load_inputs">Inputs</div>
