--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -7,13 +7,13 @@ permalink: /buttons
 <div class="relative h-32"></div>
 <div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
   {% include blocks/extra-options/background.html %}
+  {% include blocks/extra-options/theme.html %}
   <div class="px-4">
-
     <div class="field field--not-empty">
       <div class="field__label">Loading</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector">
+          <div class="selector selector--multiselect selector--expanded JS_selector JS_extra">
             <div class="selector__item JS_selectorItem--active JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field JS_load_pushes">Pushes</div>
@@ -26,12 +26,10 @@ permalink: /buttons
               </div>
             </div>
           </div>
-
           <input class="field__input" type="text" value=", ">
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
