renameming multiSelector to modal

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -80,7 +80,7 @@ permalink: /inputs
     </div>
 
     {% comment %} Popup (error){% endcomment %}
-    <div class="multiSelector" id="ms-error-user">
+    <div class="modal" id="ms-error-user">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom">
