--- a/pages/popups.html
+++ b/pages/popups.html
@@ -53,7 +53,7 @@ permalink: /popups
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector" id="ms-error">
+    <div class="modal" id="ms-error">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom">
@@ -70,7 +70,7 @@ permalink: /popups
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector animate-popup" id="ms-status">
+    <div class="modal animate-popup" id="ms-status">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom JS_itemBoxRow--error" style="display: none;">
@@ -85,7 +85,7 @@ permalink: /popups
         </div>
       </div>
       <div class="itemBox JS_optionsChildren">
-        {% for item in site.data.multiselector-status.items %}
+        {% for item in site.data.modal-status.items %}
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell JS_error-popupRow">
             <li class="itemBox__cell">
@@ -120,12 +120,12 @@ permalink: /popups
       </div>
       <div class="field__data">
         <div class="field__value">
-          <button class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></button>
+          <button class="block-action JS_has-popup" data-popid="#modal-columnpicker"></button>
         </div>
       </div>
     </div>
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector" id="ms-privacy">
+    <div class="modal" id="ms-privacy">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom">
@@ -144,20 +144,20 @@ permalink: /popups
     </div>
 
     {% comment %} Popup {% endcomment %}
-    {% include popups/multiSelector-columnpicker.html %}
+    {% include popups/modal-columnpicker.html %}
 
     {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/selector.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#multiSelector-tagpicker" %}
+          {% include components/selector.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#modal-tagpicker" %}
         </div>
       </div>
     </div>
 
     {% comment %} Popup {% endcomment %}
-    {% include popups/multiSelector-tags-colors.html %}
+    {% include popups/modal-tags-colors.html %}
 
     <div class="note">
       <li>Multiselect popup, has Selected and All groupings ine ONE itemBox. Both of the groups have collapseable function</li>
