--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -219,7 +219,7 @@ permalink: /selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector" id="ms-privacy">
+    <div class="modal" id="ms-privacy">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom">
@@ -263,7 +263,7 @@ permalink: /selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector" id="ms-error">
+    <div class="modal" id="ms-error">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom">
@@ -280,7 +280,7 @@ permalink: /selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="multiSelector animate-popup" id="ms-status">
+    <div class="modal animate-popup" id="ms-status">
       <div class="itemBox">
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--custom JS_itemBoxRow--error" style="display: none;">
@@ -295,7 +295,7 @@ permalink: /selectors
         </div>
       </div>
       <div class="itemBox JS_optionsChildren">
-        {% for item in site.data.multiselector-status.items %}
+        {% for item in site.data.modal-status.items %}
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell JS_error-popupRow">
             <li class="itemBox__cell">
@@ -366,13 +366,13 @@ permalink: /selectors
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/selector.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#multiSelector-tagpicker" %}
+          {% include components/selector.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#modal-tagpicker" %}
         </div>
       </div>
     </div>
 
     {% comment %} Popup {% endcomment %}
-    {% include popups/multiSelector-tags-colors.html %}
+    {% include popups/modal-tags-colors.html %}
   </div>
 </div>
 
