added action state for itemBox__rowInner

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -292,7 +292,7 @@ permalink: /selectors
       <div class="itemBox JS_optionsChildren">
         {% for item in site.data.modal-status.items %}
         <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell JS_error-popupRow">
+          <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_filterableCell JS_error-popupRow">
             <li class="itemBox__cell">
               <div class="itemBox__cellInner">
                 <div class="itemBox__value">
