action description for poups

--- a/pages/popups.html
+++ b/pages/popups.html
@@ -12,6 +12,9 @@ permalink: /popups
       <li>The position of the popup is usually the bottom left of the trigger touches the top left of the popup.</li>
       <li>If this way the popup would be too wide to fit fully on the screen, then it is aligned to the right: bottom right of the trigger touches the top right of the popup.</li>
       <li>The width of the popup is always the same size as the trigger, but has a min-width 300px. So if the trigger is 50% of your screen, the popup will be 50% wide too. Wider example lower under with filters.</li>
+      <h4 class="py-2">Actions</h4>
+      <li>Action can be applied to the whole row, then the underline is the primary gold color (itemBox__rowInner--action). In this case no actions can be applied on cells.</li>
+      <li>If the row doesn't have an action, you can apply actions on each cell. An action is not mandatory, you can have cells without actions.</li>
       <h4 class="py-2">Overlay</h4>
       <li>First child of the body</li>
       <li>For normal popups the overlay is darker, pointer-events-none (overlay-body--visible)</li>
