Button: Added circle-like empty buton configuration

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -70,6 +70,14 @@ permalink: /buttons
         </div>
       </div>
     </div>
+    <div class="field field--not-empty">
+      <div class="field__label">Button - no text</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="" %}
+        </div>
+      </div>
+    </div>
 
     <h3 class="mb-4 mt-8">Button color configuration</h3>
     <div class="field field--not-empty">
