itemBox -> toolbox-table rename

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -81,11 +81,11 @@ permalink: /inputs
 
     {% comment %} Popup (error){% endcomment %}
     <div class="modal" id="ms-error-user">
-      <div class="itemBox">
-        <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--custom">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
+      <div class="toolbox-table">
+        <div class="toolbox-table__row">
+          <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+            <li class="toolbox-table__cell">
+              <div class="toolbox-table__cellInner">
                 <div class="note note--error">
                   <p>Item must have a user assigned.</p>
                 </div>
