--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -215,11 +215,11 @@ permalink: /selectors
 
     {% comment %} Popup {% endcomment %}
     <div class="modal" id="ms-privacy">
-      <div class="itemBox">
-        <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--custom">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
+      <div class="toolbox-table">
+        <div class="toolbox-table__row">
+          <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+            <li class="toolbox-table__cell">
+              <div class="toolbox-table__cellInner">
 
                 <div class="note note--tooltip">
                   <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
@@ -259,11 +259,11 @@ permalink: /selectors
 
     {% comment %} Popup {% endcomment %}
     <div class="modal" id="ms-error">
-      <div class="itemBox">
-        <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--custom">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
+      <div class="toolbox-table">
+        <div class="toolbox-table__row">
+          <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+            <li class="toolbox-table__cell">
+              <div class="toolbox-table__cellInner">
                 <div class="note note--error">
                   <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
                 </div>
@@ -276,11 +276,11 @@ permalink: /selectors
 
     {% comment %} Popup {% endcomment %}
     <div class="modal animate-popup" id="ms-status">
-      <div class="itemBox">
-        <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--custom JS_itemBoxRow--error" style="display: none;">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
+      <div class="toolbox-table">
+        <div class="toolbox-table__row">
+          <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom JS_toolbox-tableRow--error" style="display: none;">
+            <li class="toolbox-table__cell">
+              <div class="toolbox-table__cellInner">
                 <div class="note note--error">
                   <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
                 </div>
@@ -289,13 +289,13 @@ permalink: /selectors
           </ul>
         </div>
       </div>
-      <div class="itemBox JS_optionsChildren">
+      <div class="toolbox-table JS_optionsChildren">
         {% for item in site.data.modal-status.items %}
-        <div class="itemBox__row">
-          <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_filterableCell JS_error-popupRow">
-            <li class="itemBox__cell">
-              <div class="itemBox__cellInner">
-                <div class="itemBox__value">
+        <div class="toolbox-table__row">
+          <ul class="toolbox-table__rowInner toolbox-table__rowInner--item toolbox-table__rowInner--action JS_filterableCell JS_error-popupRow">
+            <li class="toolbox-table__cell">
+              <div class="toolbox-table__cellInner">
+                <div class="toolbox-table__value">
                   <div class="selector selector--expanded">
                     <div class="selector__item JS_selectorItem--active selector__item--selected">
                       <div class="selector__block">
@@ -498,7 +498,7 @@ permalink: /selectors
 <script>
   $("#ms-status .JS_error-popupRow").on('click', function() {
     closeOverlay();
-    $("#ms-status .JS_itemBoxRow--error").css('display', 'flex');
+    $("#ms-status .JS_toolbox-tableRow--error").css('display', 'flex');
     $('.JS_field--error').each(function() {
       const errorField = $(this);
       errorField.addClass('field--error');
